tests/negative/typecheck/or.orng
fn main()->Int {true or false}